--- a/AllTools/CMakeLists.txt
+++ b/AllTools/CMakeLists.txt
@@ -27,4 +27,5 @@ foreach(EXECUTABLE ${EXECUTABLES})
     add_executable(${EXECUTABLE} ${EXECUTABLE}.cpp)
     target_link_libraries(${EXECUTABLE} PRIVATE utils)
     target_compile_definitions(${EXECUTABLE} PRIVATE _UNICODE UNICODE)
+    target_compile_options(${EXECUTABLE} PRIVATE /MTd)
 endforeach()
